# PersonalApi-3/src/controllers/department.js
@@ -37,6 +37,13 @@ module.exports = {
     /*
         #swagger.tags = ['Departments']
         #swagger.summary = 'Create Department'
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Department'
+            }
+        }
     */
     const data = await Department.create(req.body);
     res.status(201).send({
