# PersonalApi-3/swagger.json
@@ -12,7 +12,7 @@
       "name": "ISC"
     }
   },
-  "host": "127.0.0.1:8000",
+  "host": "127.0.0.1:8001",
   "basePath": "/",
   "schemes": [
     "http",
@@ -98,19 +98,9 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "isAdmin": {
-                  "example": "any"
-                },
-                "isLead": {
-                  "example": "any"
-                },
-                "departmentId": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Personnel"
             }
           }
         ],
@@ -249,6 +239,16 @@
         ],
         "summary": "Create Department",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Department"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -611,7 +611,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1734042561714
+              "example": 1734204809035
             }
           }
         }
